styles/theme/nextgen/css/style.css
/* ... */
.toggle-menu-button:hover {
    background-color: rgba(0,0,0,0.7);


}
.toggle-menu-button {
    width: 100px;
    margin: 0 auto;
    text-align: center;
    border-radius: 0px 0px 50px 50px;
    padding: 5px;
    border: 1px solid rgba(255,255,255,0.1);
    cursor: pointer;
    transition: all 0.5s ease;
}
.toggle-menu-button img {
    max-height: 15px;
    margin-top: -5px;
    transform: scaleY(-1);
    transition: all 0.5s ease;
}
.main-menu-hidden .toggle-menu-button {
    margin-left: 50px;
}

.main-menu-hidden .toggle-menu-button img {
    transform: scaleY(1);
}
.main-menu-hidden .main-menu {
    display: none;

}
ul.main-menu, .main-menu li {
    list-style-type: none;
    margin: 0;
    padding: 0;

}
.main-menu li a {
    display: block;
    border-radius: 25px;
    background-color: rgba(0,0,0,0.3);
    border: 1px solid rgba(255,255,255,0.1);
    padding: 5px 15px;
    margin-bottom: 5px;
    width: 100%;
    color: rgba(255,255,255,1);
    font-family: var(--secondary-font-family);
    text-align: center;
    transition: all 0.5s ease;

}
.main-menu li a:hover {
    background-color: rgba(0,0,0,0.7);
    text-decoration: none;
    transform: scale(1.1);
    font-weight: 700;
}
.main-menu li a.menuActive {
    background-color: rgba(0,0,0,0.7);
    text-decoration: none;
   
    font-weight: 700;
}



/* Settings */
.settings_bg_img_select label img {
    opacity: 0.5;
    border-radius: 25px;
    transition: all 0.5s ease;
    border: 3px solid rgba(255,255,255,0);
}
.settings_bg_img_select input[type="radio"]:checked+ img {
    opacity: 1;
    border: 3px solid rgba(255,255,255,1);
}
.settings_bg_img_select label:hover img {
    opacity: 1;
    transform: scale(1.1);
}
.settings_bg_img_select {
    padding-top: 10px;
    padding-bottom: 10px;
}
.settings_bg_img_select input {
    display: none;
}

/* Planets Box */
.planet-box {
    background-size: cover;
    min-height: 200px;
    overflow: hidden;
    z-index: 99;
    transition: all 0.5s ease;
    opacity: 1;
    border: none;
    position: relative;
    text-decoration: none !important;
    
}
a:hover .planet-box {
    text-decoration: none;
}
.planet-box-small {
  min-height: 100px !important;
}

.planet-inactive {
  filter: grayscale(100%);
}
.planet-inactive:hover {
  filter: grayscale(0%);

}
.planet-box:hover {
    transform: scale(2);
    z-index: 9999;
    opacity: 1;
}

.planet-box::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: linear-gradient(180deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0.75) 100%);
   border-radius: 15px;
}

.planet-box * {
    transition: all 0.5s ease;
    text-decoration: none !important;
    text-shadow: 0px 0px 12px #000000;
    color: rgba(255,255,255,1);
} 
.planet-box .planet-moon img {
  width: 40px;
  height: 40px;
  border-radius: 20px;
  border: 0px solid rgba(255,255,255,0);
  box-shadow: 0px 0px 5px 0px rgba(255,255,255,0.75);
-webkit-box-shadow: 0px 0px 5px 0px rgba(255,255,255,0.75);
-moz-box-shadow: 0px 0px 5px 0px rgba(255,255,255,0.75);
position: relative;
}
.planet-box-small .planet-moon img {
  width: 20px;
  height: 20px;
  border-radius: 10px;
}
.planet-box .planet-moon:hover img {
  transform: scale(1.5);
  border: 1px solid rgba(255,255,255,1);
}
.planet-box .planet-moons {
  padding-bottom: 5px;
}
.planet-box .planet-moon-active img {
  border: 2px solid rgba(255,255,255,1);
}
.planet-url {
    position: absolute;
    width: 100%;
    height: 100%;
    z-index: 99;
}
.planet-moons-url {
  position: relative;
  z-index: 9999;
}
.planet-details, .planet-moon-details {
  width: 100%;
  padding: 10px;
  font-family: var(--secondary-font-family);
  font-size: 0.9em;
  font-weight: 700;
  margin-top: -100%;
  position: absolute;
  top: 0px;
  opacity: 0;
}

.planet-moon:hover .planet-moon-details, .planet-box:hover .planet-details {
  margin-top: -50%;
  opacity: 1;
}
.planet-moons:hover ~ .planet-details {
  margin-top: -100%;
  opacity: 0;
}

.planet-info {
    bottom: 5px;
    position: absolute;
    text-align: center;
    width: 100%;
   
    line-height: 1em;
    
    
}
.planet-coords {
  font-size: 0.7em;
}

.planet-box:hover .planet-name {
  font-weight: 700;
}

.planet-name {
    font-family: var(--secondary-font-family);
    font-size: 1.2em;
    transition: all 0.5s ease;
}
.planet-box-small:hover .planet-info {
    font-size: 0.7em;
}

/* ToolTip Notify */
#tooltipNotify {
    
    bottom: 1vh;
    z-index: 99999;
    top: auto;
    right: 1vw;
    left: auto !important;
}

/* Buttons */

  .uk-button {
    
  border-radius: 25px;
  background-color: rgba(0, 0, 0, 0.545);
  border: 1px solid rgba(255,255,255,0.1);
  padding: 5px 25px;
  margin-bottom: 5px;
 
  color: rgba(255,255,255,1);
  font-family: var(--secondary-font-family);
  font-weight: 700;
  text-align: center;
  transition: all 0.5s ease;
  font-size: 1.2em;
  }
  a.uk-button {
    color: rgba(255,255,255,1);
  }
  .uk-button:hover {
    background-color: rgba(0,0,0,0.5);
    color: rgba(255,255,255,1);
    transform: scale(1.1);
  }

  .uk-button-submit {
    background-color: rgba(21, 166, 31, 0.545);
  }

  /* Loading Screen */
  .spinner-box {
    width: 300px;
    height: 300px;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: transparent;
  }
  /* KEYFRAMES */

@keyframes spin {
    from {
      transform: rotate(0);
    }
    to{
      transform: rotate(359deg);
    }
  }
  
  @keyframes spin3D {
    from {
      transform: rotate3d(.5,.5,.5, 360deg);
    }
    to{
      transform: rotate3d(0deg);
    }
  }
  
  @keyframes configure-clockwise {
    0% {
      transform: rotate(0);
    }
    25% {
      transform: rotate(90deg);
    }
    50% {
      transform: rotate(180deg);
    }
    75% {
      transform: rotate(270deg);
    }
    100% {
      transform: rotate(360deg);
    }
  }
/* ... */

